nothing new at all

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 
+git remote add origin https://github.com/Morsu/test-repo
+
 gedit history # created blank history file
 
 git add -u history  # -u keeps track of added file 
@@ -6,7 +8,9 @@ git add -A  #adds & updates tracking for files that changed names or were delete
 
 git commit -m "saved file was not uploaded in previous attempt"
 # changes are recorded on local repo
-it push https://github.com/Morsu/test-repo
+git push https://github.com/Morsu/test-repo
+
+
 
 
 
